# HTD

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  server.js
config/: config.js  example_config.json
controllers/: account_controller.js  classify_controller.js  file_controller.js  home_controller.js  post_controller.js  tutorial_file_controller.js
middleware/: authenticate.js
migrations/: database_structure.sql
models/: index.js  post.js  session.js  user.js  userView.js
public/css/: countdown.css  lightcurveplot.css  stars.css  (+1 more)
scripts/: async_api_client.py  create_image_order.py  create_user_views.py  create_user_views_batch.py  database_interaction.ipynb  fetch_posts.py  mysql_database.py  pyproject.toml  setup.js  user_generation.py
scripts/scripts/: create_user_views.py  double_users.py  mysql_database.py  user_generation.py
test/: authenticate-middleware.test.js  classify.test.js  isAuthenticated.test.js  login.test.js  logout.test.js  profile.test.js  rate-limit.test.js  register.test.js  registration-disabled.test.js  setup.js  tokenUtils.test.js  user-views-fallback.test.js
tutorial_data/: file_0.csv.zlib  file_1.csv.zlib  file_10.csv.zlib  file_11.csv.zlib  file_12.csv.zlib  file_13.csv.zlib  file_14.csv.zlib  file_15.csv.zlib  file_16.csv.zlib  file_17.csv.zlib  file_18.csv.zlib  file_19.csv.zlib  file_2.csv.zlib  file_3.csv.zlib  file_4.csv.zlib  file_5.csv.zlib  file_6.csv.zlib  file_7.csv.zlib  file_8.csv.zlib  file_9.csv.zlib  models_0.csv.zlib
utils/: highscore.js  isAuthenticated.js  seedUserViews.js  tokenUtils.js
(+22 files in other folders)
